--- a/config/eslint-config/package.json
+++ b/config/eslint-config/package.json
@@ -3,11 +3,6 @@
   "version": "0.0.0",
   "type": "module",
   "private": true,
-  "exports": {
-    "./base": "./base.js",
-    "./next-js": "./next.js",
-    "./node": "./node.js"
-  },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
@@ -15,6 +10,6 @@
   },
   "prettier": "@saas/prettier",
   "eslintConfig": {
-    "extends":["./base.js"]
+    "extends":["@saas/eslint-config/base.js"]
   }
 }
