--- a/config/typescript-config/package.json
+++ b/config/typescript-config/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
-  "publishConfig": {
-    "access": "public"
+  "files": [
+    "library.json",
+    "node.json"
+  ],
+  "devDependencies": {
+    "typescript": "^5.9.3"
   }
 }
