feat: add create user

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,4 +1,10 @@
 {
   "extends": "@saas/tsconfig/node.json",
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "prisma/generated"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
